# promli

./: '  .gitignore  CMakeLists.txt
include/core/: app.h  extension.h  extension_manager.h  prompt_engine.h  suggestion_engine.h
include/lua/: binding.h
include/utils/: logger.h  net.h
src/: main.cpp
src/core/: app.cpp  extension_manager.cpp  prompt_engine.cpp  suggestion_engine.cpp
src/lua/: binding.cpp
src/utils/: logger.cpp  net.cpp
